--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Hot Air Balloon Learning Game
+description: Sophie's customizable game for learning with a hot air balloon theme
